#**********************************************************************************************************/
#* Client/Include/Makefile.am          Profil de compilation des headers Watchdog                         */
#* Projet WatchDog version 2.0       Gestion d'habitat                      sam 05 avr 2003 21:42:30 CEST */
#* Auteur: LEFEVRE Sebastien                                                                              */
#**********************************************************************************************************/

noinst_HEADERS = protocli.h

MAINTAINERCLEANFILES = Makefile.in
